--- a/index.html
+++ b/index.html
@@ -1,123 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Raymond & Haydee Jane's Wedding</title>
-  <link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre&family=Dancing+Script&family=Bebas+Neue&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Wedding Invitation</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    @font-face {
-      font-family: 'AmsterdamFour';
-      src: url('AmsterdamFour.ttf') format('truetype');
-    }
-  </style>
 </head>
 <body>
 
-  <!-- Envelope Intro -->
+  <!-- Envelope Intro Screen -->
   <div id="envelope" class="envelope-screen">
-    <div class="envelope-flap"></div>       <!-- ▼ top flap -->
-    <div class="envelope-body"></div>       <!-- rectangle body -->
-    
-    <!--  Angled bottom flap lines -->
+    <div class="envelope-flap"></div>
+    <div class="envelope-body"></div>
     <div class="envelope-bottom-lines">
       <div class="left-line"></div>
       <div class="right-line"></div>
     </div>
-
-    <div class="heart-button" onclick="openInvitation()">❤️</div>
+    <div class="heart-button">❤️</div>
   </div>
 
-  <!--  Background Music -->
-  <audio id="bg-music" loop>
-    <source src="music.mp3" type="audio/mpeg" />
-  </audio>
+  <!-- Main Invitation Content -->
+  <div class="invitation-container">
+    <img src="1.png" class="flower-decor flower-top-left" alt="">
+    <img src="2.png" class="flower-decor flower-top-right" alt="">
+    <img src="3.png" class="flower-decor flower-bottom-left" alt="">
+    <img src="4.png" class="flower-decor flower-bottom-right" alt="">
 
-  <!--  Glitter Effect -->
-  <div class="glitter-container"></div>
+    <!-- Wedding Video Section -->
+    <div class="video-container">
+      <video id="wedding-video" loop playsinline>
+        <source src="https://drive.google.com/uc?export=download&id=1VHTFY-LcdR-lrNXgITP-oHJFWjIU_Tk_" type="video/mp4">
+        Your browser doesn't support the video tag.
+      </video>
+    </div>
 
-  <!--  Main Invitation (initially hidden) -->
-  <div id="invitation" class="hidden">
-
-    <!-- Save the Date -->
-    <div class="save-the-date-section">
-      <div class="save-text-wrapper">
-        <span class="save-date-word">Save</span>
-        <span class="save-date-small">the</span>
-        <span class="save-date-word">Date</span>
+    <!-- Ceremony Section -->
+    <div class="overlay-section" style="background-image: url('church.jpg');">
+      <div class="overlay-content">
+        <div class="overlay-text">Saint Anthony Abbot Parish</div>
+        <a href="https://maps.app.goo.gl/ir7F7PKpYsXQX29T7" class="location-btn" target="_blank">Get Direction</a>
       </div>
     </div>
 
-    <div class="invitation-container">
-
-      <!-- Corner Flowers -->
-      <img src="1.png" class="flower-decor flower-top-left" />
-      <img src="2.png" class="flower-decor flower-top-right" />
-      <img src="3.png" class="flower-decor flower-bottom-left" />
-      <img src="4.png" class="flower-decor flower-bottom-right" />
-
-      <p class="wedding-of">The Wedding Of</p>
-      <h1 class="main-heading">Raymond & Haydee Jane</h1>
-      <p class="date-fancy">12 | 21 | 25 — 12:21 PM</p>
-
-      <!-- Countdown -->
-      <div class="countdown">
-        <div><span id="days">00</span> Days</div>
-        <div><span id="hours">00</span> Hours</div>
-        <div><span id="minutes">00</span> Minutes</div>
-        <div><span id="seconds">00</span> Seconds</div>
+    <!-- Reception Section -->
+    <div class="overlay-section" style="background-image: url('reception.jpg');">
+      <div class="overlay-content">
+        <div class="overlay-text">Resort Balai Alexandra</div>
+        <a href="https://maps.app.goo.gl/1zQySSjjKZmguccs5" class="location-btn" target="_blank">Get Direction</a>
       </div>
-
-      <!-- Ceremony -->
-      <div class="overlay-section" style="background-image: url('church.jpg');">
-        <div class="overlay-content">
-          <div class="overlay-text">Saint Anthony Abbot Parish</div>
-          <a href="https://maps.app.goo.gl/ir7F7PKpYsXQX29T7" class="location-btn" target="_blank">Get Direction</a>
-        </div>
-      </div>
-
-      <!-- Reception -->
-      <div class="overlay-section" style="background-image: url('reception.jpg');">
-        <div class="overlay-content">
-          <div class="overlay-text">Resort Balai Alexandra</div>
-          <a href="https://maps.app.goo.gl/1zQySSjjKZmguccs5" class="location-btn" target="_blank">Get Direction</a>
-        </div>
-      </div>
-
-      <p class="footer">We can't wait to celebrate with you!</p>
     </div>
   </div>
 
-  <!--  Countdown Script -->
-  <script src="countdown.js"></script>
-
-  <!--  Heart Click Logic -->
+  <!-- JavaScript -->
   <script>
-    function openInvitation() {
-      const music = document.getElementById('bg-music');
-      music.play();
+    document.querySelector('.heart-button').addEventListener('click', () => {
       document.getElementById('envelope').classList.add('fade-out');
-      document.getElementById('invitation').classList.remove('hidden');
       setTimeout(() => {
         document.getElementById('envelope').style.display = 'none';
+        document.getElementById('wedding-video').play();
       }, 1000);
-    }
+    });
   </script>
-
-  <!--  Glitter Script -->
-  <script>
-    const glitterContainer = document.querySelector('.glitter-container');
-    for (let i = 0; i < 80; i++) {
-      const g = document.createElement('div');
-      g.classList.add('glitter');
-      g.style.left = Math.random() * 100 + 'vw';
-      g.style.top = (-10 + Math.random() * 20) + 'vh';
-      g.style.animationDelay = Math.random() * 5 + 's';
-      g.style.animationDuration = 5 + Math.random() * 5 + 's';
-      glitterContainer.appendChild(g);
-    }
-  </script>
-
 </body>
 </html>
